force-app/main/default/objects/Adventure__c/fields/Difficult__c.field-meta.xml
<CustomField>
    <fullName>Difficult__c</fullName>
    <label>Difficulty Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>One</fullName>
            </value>
            <value>
                <fullName>Two</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>