force-app/main/default/objects/Adventure__c/fields/Group_Size__c.field-meta.xml
<CustomField>
    <fullName>Group_Size__c</fullName>
    <label>Group Size</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>