force-app/main/default/objects/Adventure__c/fields/Length_d__c.field-meta.xml
<CustomField>
    <fullName>Length_d__c</fullName>
    <label>Length (d)</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>